--- a/benchmark_RLAP/DeepPhys.ipynb
+++ b/benchmark_RLAP/DeepPhys.ipynb
@@ -265,6 +265,35 @@
     "eval_on_dataset(test_set_MMPD, deepphys, 160, (36, 36), step=4, batch=0, save='../results/DeepPhys_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC, cumsum=True)\n",
     "get_metrics('../results/DeepPhys_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [00:47<00:00,  3.43it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 4.028, 'RMSE': 10.57, 'R': 0.62154},\n",
+       " 'Whole video': {'MAE': 2.753, 'RMSE': 8.627, 'R': 0.73356}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, deepphys, 160, (36, 36), step=4, batch=0, save='../results/DeepPhys_CCNU_COHFACE.h5', sample=cv2.INTER_CUBIC, cumsum=True)\n",
+    "get_metrics('../results/DeepPhys_CCNU_COHFACE.h5')"
+   ]
   }
  ],
  "metadata": {
