--- a/benchmark_RLAP/EfficientPhys.ipynb
+++ b/benchmark_RLAP/EfficientPhys.ipynb
@@ -39,47 +39,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\profiler\\internal\\flops_registry.py:142: tensor_shape_from_node_def_name (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.tensor_shape_from_node_def_name`\n",
       "Flops per frame:230341628\n",
-      "Model: \"ep_4\"\n",
+      "Model: \"ep\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "tsm_4 (TSM)                  multiple                  0         \n",
+      "tsm (TSM)                    multiple                  0         \n",
       "_________________________________________________________________\n",
-      "conv2d_24 (Conv2D)           multiple                  896       \n",
+      "conv2d (Conv2D)              multiple                  896       \n",
       "_________________________________________________________________\n",
-      "conv2d_25 (Conv2D)           multiple                  9248      \n",
+      "conv2d_1 (Conv2D)            multiple                  9248      \n",
       "_________________________________________________________________\n",
-      "conv2d_26 (Conv2D)           multiple                  18496     \n",
+      "conv2d_2 (Conv2D)            multiple                  18496     \n",
       "_________________________________________________________________\n",
-      "conv2d_27 (Conv2D)           multiple                  36928     \n",
+      "conv2d_3 (Conv2D)            multiple                  36928     \n",
       "_________________________________________________________________\n",
-      "conv2d_28 (Conv2D)           multiple                  33        \n",
+      "conv2d_4 (Conv2D)            multiple                  33        \n",
       "_________________________________________________________________\n",
-      "attention_mask_4 (Attention_ multiple                  0         \n",
+      "attention_mask (Attention_ma multiple                  0         \n",
       "_________________________________________________________________\n",
-      "conv2d_29 (Conv2D)           multiple                  65        \n",
+      "conv2d_5 (Conv2D)            multiple                  65        \n",
       "_________________________________________________________________\n",
-      "average_pooling2d_4 (Average multiple                  0         \n",
+      "average_pooling2d (AveragePo multiple                  0         \n",
       "_________________________________________________________________\n",
-      "dropout_8 (Dropout)          multiple                  0         \n",
+      "dropout (Dropout)            multiple                  0         \n",
       "_________________________________________________________________\n",
-      "dropout_9 (Dropout)          multiple                  0         \n",
+      "dropout_1 (Dropout)          multiple                  0         \n",
       "_________________________________________________________________\n",
-      "dense_8 (Dense)              multiple                  2097280   \n",
+      "dense (Dense)                multiple                  2097280   \n",
       "_________________________________________________________________\n",
-      "dense_9 (Dense)              multiple                  129       \n",
+      "dense_1 (Dense)              multiple                  129       \n",
       "_________________________________________________________________\n",
-      "batch_normalization_4 (Batch multiple                  12        \n",
+      "batch_normalization (BatchNo multiple                  12        \n",
       "_________________________________________________________________\n",
-      "flatten_4 (Flatten)          multiple                  0         \n",
+      "flatten (Flatten)            multiple                  0         \n",
       "=================================================================\n",
       "Total params: 2,163,087\n",
       "Trainable params: 2,163,081\n",
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,6 +355,35 @@
    "source": [
     "eval_on_dataset(test_set_MMPD, ep, 32, (72, 72), step=1, batch=0, save='../results/EfficientPhys_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC, cumsum=True)\n",
     "get_metrics('../results/EfficientPhys_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [03:57<00:00,  1.45s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 4.48, 'RMSE': 11.905, 'R': 0.54385},\n",
+       " 'Whole video': {'MAE': 3.944, 'RMSE': 12.025, 'R': 0.52752}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, ep, 32, (72, 72), step=1, batch=0, save='../results/EfficientPhys_CCNU_COHFACE.h5', sample=cv2.INTER_CUBIC, cumsum=True)\n",
+    "get_metrics('../results/EfficientPhys_CCNU_COHFACE.h5',)"
    ]
   }
  ],
