--- a/benchmark_RLAP/NoobHeart.ipynb
+++ b/benchmark_RLAP/NoobHeart.ipynb
@@ -299,6 +299,35 @@
     "eval_on_dataset(test_set_MMPD, model, 32, (8, 8), step=0.5, batch=32, save='../results/NoobHeart_CCNU_MMPD.h5')\n",
     "get_metrics('../results/NoobHeart_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'Incandescent', 'LED-low'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [00:09<00:00, 16.59it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 23.228, 'RMSE': 28.126, 'R': -0.23681},\n",
+       " 'Whole video': {'MAE': 24.95, 'RMSE': 29.544, 'R': -0.35992}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, model, 32, (8, 8), step=0.5, batch=32, save='../results/NoobHeart_CCNU_CHOHFACE.h5')\n",
+    "get_metrics('../results/NoobHeart_CCNU_CHOHFACE.h5',)"
+   ]
   }
  ],
  "metadata": {
