--- a/benchmark_RLAP/PhysFormer.ipynb
+++ b/benchmark_RLAP/PhysFormer.ipynb
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,6 +335,35 @@
    "source": [
     "#eval_on_dataset(test_set_MMPD, physformer, 160, (128, 128), step=4, batch=4, save='../results/PhysFormer_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC)\n",
     "get_metrics('../results/PhysFormer_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [07:15<00:00,  2.66s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 20.216, 'RMSE': 26.074, 'R': -0.29122},\n",
+       " 'Whole video': {'MAE': 19.986, 'RMSE': 26.077, 'R': -0.37381}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, physformer, 160, (128, 128), step=4, batch=4, save='../results/PhysFormer_CCNU_COHFACE.h5', sample=cv2.INTER_CUBIC)\n",
+    "get_metrics('../results/PhysFormer_CCNU_COHFACE.h5')"
    ]
   }
  ],
