--- a/benchmark_RLAP/PhysNet.ipynb
+++ b/benchmark_RLAP/PhysNet.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,6 +255,35 @@
    "source": [
     "#eval_on_dataset(test_set_MMPD, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC)\n",
     "get_metrics('../results/PhysNet_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [02:07<00:00,  1.28it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 18.589, 'RMSE': 25.48, 'R': -0.24029},\n",
+       " 'Whole video': {'MAE': 19.643, 'RMSE': 26.909, 'R': -0.4505}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, phys_net, 128, (32, 32), step=1, batch=32, save='../results/PhysNet_CCNU_COHFACE.h5')\n",
+    "get_metrics('../results/PhysNet_CCNU_COHFACE.h5')"
    ]
   }
  ],
