--- a/benchmark_RLAP/TS-CAN.ipynb
+++ b/benchmark_RLAP/TS-CAN.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -16,17 +25,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(160, 36, 36, 3)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_tape = \"Z:/rppg/ccnu_datatape_160x36x36_train.h5\"\n",
     "valid_tape = \"Z:/rppg/ccnu_datatape_160x36x36_valid.h5\"\n",
@@ -47,19 +48,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "WARNING:tensorflow:From x:\\Users\\wkg\\anaconda3\\envs\\dl\\lib\\site-packages\\tensorflow\\python\\profiler\\internal\\flops_registry.py:142: tensor_shape_from_node_def_name (from tensorflow.python.framework.graph_util_impl) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use `tf.compat.v1.graph_util.tensor_shape_from_node_def_name`\n",
       "Flops per frame:52158718\n",
-      "Model: \"ts_can_end_to_end_5\"\n",
+      "Model: \"ts_can_end_to_end\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "model_5 (Functional)         (None, 1)                 532899    \n",
+      "model (Functional)           (None, 1)                 532899    \n",
       "=================================================================\n",
       "Total params: 532,899\n",
       "Trainable params: 532,899\n",
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,24 +243,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 660/660 [02:59<00:00,  3.67it/s]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 1.715, 'RMSE': 4.864, 'R': 0.85781},\n",
-       " 'Whole video': {'MAE': 0.95, 'RMSE': 1.396, 'R': 0.98897}}"
+       "{'Sliding window': {'MAE': 13.869, 'RMSE': 23.729, 'R': 0.20026},\n",
+       " 'Whole video': {'MAE': 12.013, 'RMSE': 21.761, 'R': 0.26656}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#eval_on_dataset(test_set_MMPD, ts_can_e2e, 160, (36, 36), step=1, batch=0, save='../results/TS-CAN_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC, cumsum=True)\n",
+    "eval_on_dataset(test_set_MMPD, ts_can_e2e, 160, (36, 36), step=4, batch=0, save='../results/TS-CAN_CCNU_MMPD.h5', sample=cv2.INTER_CUBIC, cumsum=True)\n",
+    "#get_metrics('../results/TS-CAN_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])\n",
+    "get_metrics('../results/TS-CAN_CCNU_MMPD.h5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 1.523, 'RMSE': 4.688, 'R': 0.87021},\n",
+       " 'Whole video': {'MAE': 0.961, 'RMSE': 1.41, 'R': 0.98862}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "get_metrics('../results/TS-CAN_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [01:57<00:00,  1.39it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 3.187, 'RMSE': 9.166, 'R': 0.7024},\n",
+       " 'Whole video': {'MAE': 2.284, 'RMSE': 7.809, 'R': 0.77428}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, ts_can_e2e, 160, (36, 36), step=4, batch=0, save='../results/TS-CAN_CCNU_COHFACE.h5', cumsum=True)\n",
+    "get_metrics('../results/TS-CAN_CCNU_COHFACE.h5')"
    ]
   }
  ],
