--- a/benchmark_RLAP/ours.ipynb
+++ b/benchmark_RLAP/ours.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,17 +267,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Sliding window': {'MAE': 2.698, 'RMSE': 7.397, 'R': 0.68773},\n",
-       " 'Whole video': {'MAE': 1.523, 'RMSE': 3.932, 'R': 0.91476}}"
+       "{'Sliding window': {'MAE': 2.681, 'RMSE': 7.381, 'R': 0.69042},\n",
+       " 'Whole video': {'MAE': 1.512, 'RMSE': 3.93, 'R': 0.91478}}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,6 +285,35 @@
    "source": [
     "#eval_on_dataset(test_set_MMPD, m1, 450, (8, 8), step=10, batch=32, save='../results/ours_CCNU_MMPD.h5')\n",
     "get_metrics('../results/ours_CCNU_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent',])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [00:06<00:00, 23.66it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 17.117, 'RMSE': 26.319, 'R': -0.10291},\n",
+       " 'Whole video': {'MAE': 16.051, 'RMSE': 25.736, 'R': -0.11651}}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, m1, 450, (8, 8), step=1, batch=32, save='../results/ours_CCNU_COHFACE.h5')\n",
+    "get_metrics('../results/ours_CCNU_COHFACE.h5')"
    ]
   }
  ],
