--- a/benchmark_RLAP/unsupervised.ipynb
+++ b/benchmark_RLAP/unsupervised.ipynb
@@ -430,6 +430,93 @@
     "eval_on_dataset(test_set_MMPD, to_model(POS), 900, (1, 1), step=25, batch=0, save='../results/POS_MMPD.h5')\n",
     "get_metrics('../results/POS_MMPD.h5', motion='Stationary', skin_color='3', light=['LED-high', 'LED-low', 'Incandescent',])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [01:59<00:00,  1.37it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 20.803, 'RMSE': 27.999, 'R': -0.15013},\n",
+       " 'Whole video': {'MAE': 22.313, 'RMSE': 29.911, 'R': -0.32224}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, to_model(POS), 900, (1, 1), step=25, batch=0, save='../results/POS_COHFACE.h5')\n",
+    "get_metrics('../results/POS_COHFACE.h5',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [00:01<00:00, 98.93it/s] \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 25.426, 'RMSE': 30.871, 'R': -0.20367},\n",
+       " 'Whole video': {'MAE': 27.402, 'RMSE': 32.387, 'R': -0.32084}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, to_model(CHROM), 900, (1, 1), step=25, batch=0, save='../results/CHROM_COHFACE.h5')\n",
+    "get_metrics('../results/CHROM_COHFACE.h5',)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 164/164 [00:47<00:00,  3.42it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Sliding window': {'MAE': 8.636, 'RMSE': 16.821, 'R': 0.22724},\n",
+       " 'Whole video': {'MAE': 7.905, 'RMSE': 16.067, 'R': 0.28228}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_on_dataset(test_set_COHFACE, to_model(ICA), 900, (1, 1), step=25, batch=0, save='../results/ICA_COHFACE.h5')\n",
+    "get_metrics('../results/ICA_COHFACE.h5',)"
+   ]
   }
  ],
  "metadata": {
