--- a/Tutorial/Noob Heart (JAX).ipynb
+++ b/Tutorial/Noob Heart (JAX).ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,33 +78,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch=0,\tval_loss=0.6026872396469116\n",
+      "epoch=0,\tval_loss=0.5844148993492126\n",
       "Best model checked\n",
-      "epoch=1,\tval_loss=0.5784514546394348\n",
+      "epoch=1,\tval_loss=0.5737578272819519\n",
       "Best model checked\n",
-      "epoch=2,\tval_loss=0.5760605931282043\n",
+      "epoch=2,\tval_loss=0.5734740495681763\n",
       "Best model checked\n",
-      "epoch=3,\tval_loss=0.5683271884918213\n",
+      "epoch=3,\tval_loss=0.5666247606277466\n",
       "Best model checked\n",
-      "epoch=4,\tval_loss=0.5639956593513489\n",
+      "epoch=4,\tval_loss=0.5646708607673645\n",
       "Best model checked\n",
-      "epoch=5,\tval_loss=0.5604115128517151\n",
+      "epoch=5,\tval_loss=0.5626716613769531\n",
       "Best model checked\n",
-      "epoch=6,\tval_loss=0.5594140291213989\n",
+      "epoch=6,\tval_loss=0.5605804324150085\n",
       "Best model checked\n",
-      "epoch=7,\tval_loss=0.5582550764083862\n",
+      "epoch=7,\tval_loss=0.5595669746398926\n",
       "Best model checked\n",
-      "epoch=8,\tval_loss=0.5572916865348816\n",
+      "epoch=8,\tval_loss=0.5586665272712708\n",
       "Best model checked\n",
-      "epoch=9,\tval_loss=0.5571040511131287\n",
-      "Best model checked\n"
+      "epoch=9,\tval_loss=0.5613584518432617\n"
      ]
     }
    ],
@@ -145,13 +144,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a6854d77dbb545c7a1f06cb0b3b8732c",
+       "model_id": "94fe938f29ee49f8a6bc05d42a4767f6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -166,8 +165,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HR metrics: MAE:0.99, RMSE:1.449, R:0.99687\n",
-      "HRV metrics: MAE:39.019, RMSE:43.236, R:0.53448\n"
+      "HR metrics: MAE:0.995, RMSE:1.448, R:0.9969\n",
+      "HRV metrics: MAE:40.145, RMSE:44.544, R:0.51722\n"
      ]
     }
    ],
