--- a/Tutorial/Noob Heart (JAX).ipynb
+++ b/Tutorial/Noob Heart (JAX).ipynb
@@ -60,7 +60,7 @@
     "        x = N(lax.tanh(lax.conv(x, weights[0], (1, 2, 2), 'SAME')+weights[1]))  # Conv Tanh Norm\n",
     "        x = N(lax.tanh(lax.conv(x, weights[2], (1, 2, 2), 'SAME')+weights[3]))\n",
     "        x = lax.conv(x, jnp.ones((1, 2, 1, 2, 2)), (1, 2, 2), 'VALID')          # Pool\n",
-    "        x = lax.tanh(lax.conv(x, weights[4], (1, 1, 1), 'SAME')+weights[5])\n",
+    "        x = lax.conv(x, weights[4], (1, 1, 1), 'SAME')+weights[5]\n",
     "        return x.reshape(x.shape[0], -1)                                        # Flatten\n",
     "    model.weights = weights\n",
     "    return model\n",
@@ -85,25 +85,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch=0,\tval_loss=0.5844148993492126\n",
+      "epoch=0,\tval_loss=0.6488630175590515\n",
       "Best model checked\n",
-      "epoch=1,\tval_loss=0.5737578272819519\n",
+      "epoch=1,\tval_loss=0.6216443777084351\n",
       "Best model checked\n",
-      "epoch=2,\tval_loss=0.5734740495681763\n",
+      "epoch=2,\tval_loss=0.602000892162323\n",
       "Best model checked\n",
-      "epoch=3,\tval_loss=0.5666247606277466\n",
+      "epoch=3,\tval_loss=0.5860676169395447\n",
       "Best model checked\n",
-      "epoch=4,\tval_loss=0.5646708607673645\n",
+      "epoch=4,\tval_loss=0.5778675079345703\n",
       "Best model checked\n",
-      "epoch=5,\tval_loss=0.5626716613769531\n",
+      "epoch=5,\tval_loss=0.5712727308273315\n",
       "Best model checked\n",
-      "epoch=6,\tval_loss=0.5605804324150085\n",
+      "epoch=6,\tval_loss=0.5722319483757019\n",
+      "epoch=7,\tval_loss=0.5705991387367249\n",
       "Best model checked\n",
-      "epoch=7,\tval_loss=0.5595669746398926\n",
-      "Best model checked\n",
-      "epoch=8,\tval_loss=0.5586665272712708\n",
-      "Best model checked\n",
-      "epoch=9,\tval_loss=0.5613584518432617\n"
+      "epoch=8,\tval_loss=0.5706881880760193\n",
+      "epoch=9,\tval_loss=0.5693888664245605\n",
+      "Best model checked\n"
      ]
     }
    ],
@@ -150,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "94fe938f29ee49f8a6bc05d42a4767f6",
+       "model_id": "d0db07e1ac244124b91dd20d5ec682ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -165,8 +164,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "HR metrics: MAE:0.995, RMSE:1.448, R:0.9969\n",
-      "HRV metrics: MAE:40.145, RMSE:44.544, R:0.51722\n"
+      "HR metrics: MAE:1.009, RMSE:1.433, R:0.9969\n",
+      "HRV metrics: MAE:38.703, RMSE:43.339, R:0.62763\n"
      ]
     }
    ],
